# IOI-seminar2

./: .gitignore  setup.cfg  setup.py
orangecontrib/ioi/widgets/: __init__.py  owanimation.py  owbouncingballs.py  owcamera.py  owplotcolors.py  owscreensaver.py  test.py
