[metadata]
name = Orange3-ioi
author = Jaka Kokosar
author_email = jaka.kokosar@gmail.com
maintainer = Jaka Kokosar
url = https://github.com/jakakokosar/orange3-ioi
project_urls =
    Bug Tracker = https://github.com/jakakokosar/orange3-ioi/issues
    Source Code = https://github.com/jakakokosar/orange3-ioid
;documentation_name = Orange Bioinformatics
;description = Assignment for interaction and information design
long_description = file: README.md
long_description_content_type= text/markdown
keywords = 'orange3 add-on'
;license = GPL3+
;license_file = LICENSE
classifiers =
    Intended Audience :: Education
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
namespace_packages = orangecontrib
test_suite = orangecontrib.ioi.tests.suite
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:

[options.entry_points]
orange3.addon =
	ioi=orangecontrib.ioi
orange.widgets =
    ioi=orangecontrib.ioi.widgets
orange.canvas.help =
    html-index = orangecontrib.ioi.widgets:WIDGET_HELP_PATH